[package]
name = "lumina_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { features=["full"], version = "1.20.1" }
anyhow = "1.0.63"
dotenv = "0.15.0"
openai = "1.0.0-alpha.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
